Fixing slide loader height bug on mobile.
Problem: The carousel doesn't have a height set on mobile since we allow the image to go full width and dictate the height. However, this is a problem if no images are loaded.

Solution: Set a min height on the slide while the first image is not loaded.

--- a/app/styles/home/carousel/_slide.scss
+++ b/app/styles/home/carousel/_slide.scss
@@ -33,6 +33,10 @@
     flex-direction: column;
     align-items: center;
 
+    &--first-image-not-loaded {
+      min-height: 200px;
+    }
+
     &__image {
       width: initial;
       max-height: initial;
